--- a/CoffeApp/CoffeApp.Android/CoffeApp.Android.csproj
+++ b/CoffeApp/CoffeApp.Android/CoffeApp.Android.csproj
@@ -68,13 +68,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Renderers\VideoPlayerRenderer.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Coffe_woman.json" />
     <AndroidAsset Include="Assets\cafe_cup.json" />
+    <AndroidAsset Include="Assets\coffe_out.json" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
@@ -82,7 +82,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Tabbar.xml" />
     <AndroidResource Include="Resources\layout\Toolbar.xml" />
-    <AndroidResource Include="Resources\raw\oldbrickyard_video.mp4" />
     <AndroidResource Include="Resources\values\styles.xml" />
     <AndroidResource Include="Resources\values\colors.xml" />
     <AndroidResource Include="Resources\mipmap-anydpi-v26\icon.xml" />
@@ -98,7 +97,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Resources\raw\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CoffeApp\CoffeApp.csproj">
       <Project>{4FFCE320-0583-445F-A553-7D54B7A28E04}</Project>
